--- a/myStyles.css
+++ b/myStyles.css
@@ -1,7 +1,23 @@
+:root {
+    --background: #fffffe;
+    --background-main: #e3f6f5;
+    --text: #272343;
+    --ilustration:#90b4ce;
+    --checked:#ffd803;
+    --strong:#319e1e;
+    --weak:#f25252;
+    --medium:#bae8e8;
+}
+
 * {
     margin:0;
     padding:0;
     box-sizing: border-box;
+    color:var(--text);
+}
+
+.main-container {
+    border-radius: 15px;
 }
 
 body {
@@ -10,6 +26,20 @@ body {
     align-items:center;
     width:100%;
     height:100vh;
+    background-color:var(--background)
+}
+
+.buttons {
+    border-radius: 15px;
+    padding:10px 20px;
+    border: none;
+    background-color:var(--checked);
+}
+
+.buttons:hover {
+    cursor:pointer;
+    background-color:var(--text);
+    color:var(--background);
 }
 
 .main-container {
@@ -18,7 +48,7 @@ body {
     justify-content:center;
     min-height:400px;
     min-width:400px;
-    background-color:red;
+    background-color:var(--background-main);
 }
 
 .form {
@@ -29,6 +59,7 @@ body {
     height:100%;
     margin:2rem;
     min-height:400px;
+    width:100%;
 }
 
 /* Header */
@@ -40,16 +71,22 @@ body {
     display:block;
     width:100%;
     resize:none;
+    background:transparent;
+    border:none;
+    color: var(--headline);
+    background-color:var(--background);
+    border-radius:5px;
 }
 
-#securityIndicator {
+.security-container {
     float:left;
-    margin: 1rem;
+    margin: 1rem 0;
+    height:100%;
 }
 
 #copyBtn {
- float:right;
- margin: 1rem;
+    float:right;
+    margin: 1rem 0; 
 }
 
 
@@ -57,21 +94,31 @@ body {
 /* Options */
 
 .options-container {
-    padding:1rem 2rem;
+    /* padding:1rem 2rem; */
     height:100%;
-    background-color:green;
+    width:100%;
     display:flex;
     flex-direction:column;
+    border-radius:5px;
 }
 
 .options-items {
-    padding:1rem 0;
-    margin:0 1rem;
+    padding:1rem 0; 
+    /* margin:0 1rem; */
+    width:100%;
+}
+
+.option-items > input {
+    float:right;
 }
 
 .footer {
     width:100%;
-    padding: 1rem 0;
+     padding: 1rem 0; 
+}
+
+#length {
+    background-color:black;
 }
 
 
@@ -79,3 +126,81 @@ body {
 .btn-generate {
     width:100%;
 }
+
+/* Styling the checkboxes */
+.checkboxes {
+    color:var(--checked);
+    float:right;
+}
+input[role=switch] {
+    appearance: none;
+    -webkit-appearance: none;
+    position: relative;
+    display: inline-block;
+    width: 2.4em;
+    height: 1.4em;
+    margin: -.2em 0;
+    box-sizing: content-box;
+    /* padding: 0; */
+    border: none;
+    border-radius: .7em;
+    background: rgba(160,160,160,0.7);
+    box-shadow: 0 .15em .25em rgba(0,0,0,0.5) inset, 0 -.5px 0 rgba(255,255,255,0.2) inset;
+    transition: background-color 250ms ease, box-shadow 250ms ease;
+    font-size: 100%;
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    user-select: none;
+    outline: none;
+  }
+  input[role=switch]::before {
+    content: '';
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    position: absolute;
+    width: 1em;
+    height: 1em;
+    left: 0;
+    top: 0;
+    background: rgba(240,240,240,0.9);
+    box-shadow: 0 1px 1px #fff inset, 0 .2em .5em rgba(255,255,255,0.7) inset, 0 -.2em .3em rgba(0,0,0,0.2) inset, 0 .05em .25em rgba(0,0,0,0.7);
+    border-radius: 50%;
+    transform: translate(20%, 20%);
+    transition: transform 250ms ease;
+    color: rgba(0,0,0,0.3);
+    line-height: 1;
+  }
+  input[role=switch]:focus::before {
+    background: rgba(255,255,255,0.9);
+  }
+  input[role=switch]:checked {
+    background-color: var(--bg-checked, var(--checked));
+  }
+  input[role=switch]:focus-visible {
+    box-shadow: 0 .15em .25em rgba(0,0,0,0.5) inset, 0 -.5px 0 rgba(255,255,255,0.2) inset, 0 0 0 2px rgba(255,255,255,0.8), 0 0 0 4px var(--bg-checked, var(--bg, rgb(60,130,250)));
+  }
+  input[role=switch]:checked::before {
+    transform: translate(120%, 20%);
+  }
+  input[role=switch]:indeterminate::before {
+    transform: translate(70%, 20%);
+    content: '-';
+  }
+  input[role=switch]:disabled:before {
+    opacity: 0.4;
+  }
+
+  /*Additional styles to security warning */
+  
+  .strong {
+      color:var(--strong);
+  }
+
+  .medium {
+      color:var(--checked);
+  }
+
+  .weak {
+      color:var(--weak);
+  }
